# ray-tracer-s8

./: Cargo.toml  deploy
docker/: docker-stack.yaml
docker/master/: Dockerfile
docker/slave/: Dockerfile
local-dependencies/bvh/src/: aabb.rs  ray.rs
ray-tracer-controller/: Cargo.toml  img.pnm  t.json
ray-tracer-controller/src/: main.rs  obj.rs
ray-tracer-slave/: Cargo.toml  README.md
ray-tracer-slave/local-dependencies/bvh/: Cargo.toml
ray-tracer-slave/local-dependencies/bvh/src/: lib.rs
ray-tracer-slave/src/: color.rs  lib.rs  main.rs
ray-tracer-slave/src/shapes/: mesh.rs  mod.rs  sphere.rs
src/: camera.rs  color.rs  gui.rs  main.rs  ray.rs  shapes.rs  vector3.rs
src/shapes/: mesh.rs  mod.rs  sphere.rs
