[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "0.6.1"
log = "*"
pretty_env_logger = "0.4.0"
home = "*"
rand="0.8.5"
image = "*"
eframe = "0.21.3"
egui_extras = "*"
roots = "0.0.8"
