[package]
name = "ray-tracer-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ray-tracer-slave = {path="../ray-tracer-slave"}
tobj = "*"
reqwest="*"
crossbeam-channel = "*"
serde_json="*"
image="*"
actix-web="*"
log = "*"
pretty_env_logger = "0.4.0"
uuid = {version="1.3.1", features=["fast-rng", "v4"]}
futures = "*"
pollster = "*"
