[package]
name = "ray-tracer-slave"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/actuday6418/ray-tracer-s8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="ray_tracer_interface"
path="src/lib.rs"

[dependencies]
glam = {version = "0.23.0", features = ["serde"]}
auto_impl = "1.0.1"
rayon = "1.7"
log = "*"
serde_json = "*"
serde = {version="*", features=["derive"]}
pretty_env_logger = "0.4.0"
home = "*"
rand={version = "0.8.5", features=["small_rng"]}
rand_distr = "*"
# image = "*"
obj-rs = "0.6"
eframe = "0.21.3"
egui_extras = "*"
roots = "0.0.8"
bvh = { path = "local-dependencies/bvh"}
tiny_http="*"
