[package]
name = "ray-tracer-slave"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/actuday6418/ray-tracer-s8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="ray_tracer_interface"
path="src/lib.rs"

[dependencies]
glam = {version = "0.23.0", features = ["serde"]}
auto_impl = "1.0.1"
rayon = "1.7"
log = "*"
serde_json = "1.0"
serde = {version="1.0.151", features=["derive"]}
pretty_env_logger = "0.4.0"
home = "*"
rand={version = "0.8.5", features=["small_rng"]}
rand_distr = "*"
# image = "*"
obj-rs = "0.6"
roots = "0.0.8"
bvh = { path = "local-dependencies/bvh"}
actix-web={version = "4.3.1", features = ["rustls"]}
crossbeam-channel = "*"
tobj = "*"
reqwest={ versio = "*", default-features = false, features = ["blocking", "rustls-tls" ]}
uuid = {version="1.3.1", features=["fast-rng", "v4", "serde"]}
displaydoc="*"

[profile.release]
lto = true
